--- a/example/index.html
+++ b/example/index.html
@@ -38,6 +38,8 @@
     <div id="cart-widget"></div>
     <button id="destroy">Destroy</button>
 
+    <div id="cart-info" style="padding: 10px 0"></div>
+
     <h1>Global</h1>
 
     <select id="api-return">
@@ -87,9 +89,26 @@
     const tokenButton = document.getElementById("token");
     const destroyButton = document.getElementById("destroy");
     const openAppButton = document.getElementById("open");
+    const cartInfo = document.getElementById("cart-info");
 
     const cartWidget = api.cartWidget(cartWidgetWrapper);
     const productWidget = api.productDetailWidget(productWidgetWrapper);
+
+    api.on("addToCart", (itemId, quantity, price) => {
+      cartInfo.innerHTML = `Item "${itemId}" added to cart: ${quantity} x ${
+        price / 100
+      } €`;
+    });
+
+    api.on("removeFromCart", (itemId) => {
+      cartInfo.innerHTML = `Item "${itemId}" removed from cart`;
+    });
+
+    api.on("changeCartQuantity", (itemId, quantity, price) => {
+      cartInfo.innerHTML = `Item "${itemId}" quantity changed to ${quantity} x ${
+        price / 100
+      } €`;
+    });
 
     destroyButton.addEventListener("click", () => {
       cartWidget.destroy();
